[package]
name = "idempotency-token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.8"
aws-sdk-dynamodb = "0.8"
aws-smithy-client = { version = "0.38", features = ["test-util"] }
lambda_http = "0.5"
md5 = "0.7.0"
serde = {version = "1.0.144", features = ["derive"]}
serde_dynamo = { version = "4.0.6", features = ["aws-sdk-dynamodb+0_8"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
aws-smithy-http = "0.38"
aws-types = { version = "0.8", features = ["hardcoded-credentials"] }
http = "0.2"


[[bin]]
name = "post-function"
path = "./src/main.rs"
test = false
